collaborative filtering knn

--- a/movielens_recommender.ipynb
+++ b/movielens_recommender.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -25,6 +25,7 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import re\n",
+    "import sklearn\n",
     "\n",
     "from matplotlib import pyplot as plt\n"
    ]
@@ -38,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 40,
    "metadata": {
     "collapsed": true
    },
@@ -61,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 41,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -88,13 +89,12 @@
     "for genre in movie_genres:\n",
     "    movies_data[genre] = movies_data[\"genres\"].apply(lambda x: int(genre in x))\n",
     "\n",
-    "movies_data = movies_data.drop(\"genres\", 1)\n",
-    "\n"
+    "movies_data = movies_data.drop(\"genres\", 1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 80,
    "metadata": {
     "collapsed": false
    },
@@ -105,14 +105,15 @@
     "ratings_data[\"month\"] = ratings_data[\"time\"].apply(lambda x: x.month)\n",
     "ratings_data[\"day\"] = ratings_data[\"time\"].apply(lambda x: x.day)\n",
     "ratings_data[\"hour\"] = ratings_data[\"time\"].apply(lambda x: x.hour)\n",
+    "ratings_data[\"rating\"] = ratings_data[\"rating\"].astype(int)\n",
     "\n",
-    "ratings_data = movies_data.drop(\"timestamp\", 1)\n",
-    "ratings_data = movies_data.drop(\"time\", 1)\n"
+    "# ratings_data = movies_data.drop(\"timestamp\", 1)\n",
+    "# ratings_data = movies_data.drop(\"time\", 1)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 81,
    "metadata": {
     "collapsed": false
    },
@@ -133,12 +134,49 @@
       "1    16  \n",
       "2    16  \n",
       "3    16  \n",
-      "4    16  \n"
+      "4    16  \n",
+      "   movieId                        title  year  Action  Adventure  Animation  \\\n",
+      "0        1                    Toy Story  1995       0          1          1   \n",
+      "1        2                      Jumanji  1995       0          1          0   \n",
+      "2        3             Grumpier Old Men  1995       0          0          0   \n",
+      "3        4            Waiting to Exhale  1995       0          0          0   \n",
+      "4        5  Father of the Bride Part II  1995       0          0          0   \n",
+      "\n",
+      "   Children's  Comedy  Crime  Documentary   ...     Fantasy  Film-Noir  \\\n",
+      "0           0       1      0            0   ...           1          0   \n",
+      "1           0       0      0            0   ...           1          0   \n",
+      "2           0       1      0            0   ...           0          0   \n",
+      "3           0       1      0            0   ...           0          0   \n",
+      "4           0       1      0            0   ...           0          0   \n",
+      "\n",
+      "   Horror  Musical  Mystery  Romance  Sci-Fi  Thriller  War  Western  \n",
+      "0       0        0        0        0       0         0    0        0  \n",
+      "1       0        0        0        0       0         0    0        0  \n",
+      "2       0        0        0        1       0         0    0        0  \n",
+      "3       0        0        0        1       0         0    0        0  \n",
+      "4       0        0        0        0       0         0    0        0  \n",
+      "\n",
+      "[5 rows x 21 columns]\n"
      ]
     }
    ],
    "source": [
-    "print(ratings_data.head())"
+    "print(ratings_data.head())\n",
+    "print(movies_data.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 176,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "ratings_table = ratings_data.pivot_table(columns=[\"movieId\"], index=['userId'], values='rating').astype(float)\n",
+    "rated_items = ratings_table.notnull()\n",
+    "for movie in ratings_table.columns.values:\n",
+    "    ratings_table[movie] = ratings_table[movie].fillna(ratings_table[movie].median())\n"
    ]
   },
   {
@@ -148,6 +186,95 @@
    },
    "source": [
     "## Collaborative filtering"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 205,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "from sklearn.cross_validation import KFold\n",
+    "from sklearn.neighbors import KNeighborsRegressor\n",
+    "import math\n",
+    "\n",
+    "\n",
+    "def kfolds(data, n_folds=3):\n",
+    "    folds = []\n",
+    "    sets = []\n",
+    "    k = math.floor(len(data) / n_folds)\n",
+    "    rest = len(data) % n_folds\n",
+    "    for i in range(n_folds):\n",
+    "        first_ind = i * k\n",
+    "        last_ind = (i + 1) * k \n",
+    "        if rest > 0:\n",
+    "            last_ind  += 1\n",
+    "            rest -= 1\n",
+    "        folds.append(data.iloc[first_ind : last_ind])\n",
+    "    for i in range(n_folds):\n",
+    "        sets.append((folds[i], pd.concat([folds[j] for j in range(n_folds) if j != i])))\n",
+    "        \n",
+    "    return sets\n",
+    "\n",
+    "def predict_values(train_data, train_target, test_data, model=KNeighborsRegressor()):\n",
+    "    model.fit(train_data, train_target)\n",
+    "    return model.predict(test_data)\n",
+    "    \n",
+    "def cross_validation(data, movie):\n",
+    "    cv_pred = []\n",
+    "    for test_set, train_set in kfolds(data):\n",
+    "        train_predictors = train_set.drop(movie_id, axis=1)\n",
+    "        train_target = train_set[movie]\n",
+    "        test_predictors = test_set.drop(movie_id, axis=1)\n",
+    "        cv_pred.append(predict_values(train_predictors, train_target, test_predictors))\n",
+    "    return np.concatenate(cv_pred, axis=0)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Error measure"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 208,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.959643335728\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import mean_squared_error\n",
+    "from random import sample\n",
+    "\n",
+    "def rmse(actual, predictions):\n",
+    "    return np.sqrt(mean_squared_error(actual, predictions))\n",
+    "\n",
+    "predictions = []\n",
+    "actual = []\n",
+    "\n",
+    "for movie_id in range(1, 5): # sample(ratings_table.columns.values.tolist(), 3):\n",
+    "    movie_predictions = cross_validation(ratings_table, movie_id)\n",
+    "    rated_movie_ixs = ratings_table[rated_items[movie_id]].index \n",
+    "    predictions.append(pd.Series(movie_predictions, index=ratings_table.index)[rated_movie_ixs])\n",
+    "    actual.append(ratings_table[movie_id][rated_movie_ixs])\n",
+    "\n",
+    "predictions = pd.concat(predictions)\n",
+    "actual = pd.concat(actual)\n",
+    "    \n",
+    "error = rmse(actual, predictions)\n",
+    "print(error)"
    ]
   },
   {
