--- a/crimes.ipynb
+++ b/crimes.ipynb
@@ -9,19 +9,24 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "train_data = pd.read_csv('kaggle_crimes/train.csv')[:10000]\n",
-    "# test_data = pd.read_csv('kaggle_crimes/test.csv')"
+    "train_data = pd.read_csv('data/train.csv')[:10000]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###Adding new features"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 311,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "# adding features\n",
     "import re\n",
     "\n",
     "def get_street_name(address):\n",
@@ -66,8 +71,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###Encode string values"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 312,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -87,17 +99,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 313,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "# #plot localization and categories of crimes\n",
-    "# from matplotlib import pyplot as plt\n",
-    "# plt.scatter(train_data.X, train_data.Y, c=train_data.Category)\n",
-    "# plt.show()"
+    "###Features selection"
    ]
   },
   {
@@ -108,15 +113,19 @@
    },
    "outputs": [],
    "source": [
-    "# features selection\n",
-    "\n",
-    "# from sklearn.feature_selection import SelectKBest, f_classif\n",
+    "# from sklearn.feature_selection import SelectKBest\n",
     "\n",
     "predictors = [\"X\", \"Y\", \"Inside\", \"DayTime\", \"PdDistrict\"]\n",
     "# selector = SelectKBest(f_classif, k=7)\n",
     "# selector.fit(train_data[predictors], train_data.Category)\n",
-    "selected_features_train = train_data[predictors].as_matrix()\n",
-    "# print(selector.scores_)"
+    "selected_features_train = train_data[predictors].as_matrix()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###Cross-validation and classification"
    ]
   },
   {
@@ -127,28 +136,15 @@
    },
    "outputs": [],
    "source": [
-    "# cross-validation and classification\n",
-    "\n",
     "from sklearn.cross_validation import KFold\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "from sklearn.multiclass import OneVsRestClassifier,  OutputCodeClassifier\n",
     "from sklearn.svm import LinearSVC\n",
     "from sklearn.svm import SVC\n",
-    "\n",
     "import numpy as np\n",
-    "\n",
-    "# classifier = Classifier(\n",
-    "#     layers=[\n",
-    "#         Layer(\"Maxout\", units=100, pieces=2),\n",
-    "#         Layer(\"Softmax\")],\n",
-    "#     learning_rate=0.001,\n",
-    "#     n_iter=25)\n",
-    "\n",
     "\n",
     "kf = KFold(train_data.shape[0], n_folds=3, random_state=1)\n",
     "classifier = KNeighborsClassifier(n_neighbors=50)\n",
-    "# classifier = OneVsRestClassifier(LinearSVC(random_state=0))\n",
-    "# classifier = SVC()\n",
     "predictions = []\n",
     "\n",
     "for train, test in kf:\n",
@@ -161,22 +157,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###Calculate error"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 316,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "49.5360864969\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# calculate error\n",
     "import scipy as sp\n",
     "import math\n",
     "\n",
@@ -198,13 +192,14 @@
     "    ll = ll * -1.0/len(act)\n",
     "    return ll\n",
     "\n",
-    "def llfun(act, pred):\n",
-    "    \"\"\" Logloss function for 1/0 probability\n",
-    "    \"\"\"\n",
-    "    return (-(~(act == pred)) * math.log(1e-15)).sum() / len(act)\n",
-    "\n",
-    "log_loss_classification = log_loss(class_to_vect(train_data.Category), class_to_vect(predictions))\n",
-    "print(log_loss_classification)"
+    "log_loss_classification = log_loss(class_to_vect(train_data.Category), class_to_vect(predictions))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###Predict test set"
    ]
   },
   {
@@ -215,7 +210,6 @@
    },
    "outputs": [],
    "source": [
-    "# predict test set\n",
     "\n",
     "# add features\n",
     "test_data['Dates'] =  pd.to_datetime(test_data['Dates'], format='%Y-%m-%d %H:%M:%S')\n",
@@ -247,6 +241,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###Save results"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 301,
    "metadata": {
@@ -254,7 +255,6 @@
    },
    "outputs": [],
    "source": [
-    "# save result\n",
     "classification_results = pd.DataFrame(class_to_vect(test_classification), columns=categories_labels.classes_)\n",
     "classification_results.to_csv('kaggle_crimes/submission.csv', index_label='Id')"
    ]
