--- a/recipes.ipynb
+++ b/recipes.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -19,7 +19,7 @@
     "import numpy as np\n",
     "import nltk\n",
     "\n",
-    "train_data = pd.read_json('data/kaggle_recipes/train.json')"
+    "train_data = pd.read_json('data/train.json')"
    ]
   },
   {
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -89,27 +89,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(39774, 2581)\n",
-      "[ 6 16  4 ...,  1  3 13]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn.naive_bayes import MultinomialNB\n",
     "from sklearn.svm import SVC\n",
@@ -118,7 +100,6 @@
     "kfold = KFold(n=words_vects.shape[0], n_folds=3)\n",
     "\n",
     "clf = MultinomialNB()\n",
-    "print(words_vects.shape)\n",
     "\n",
     "predictions = []\n",
     "for train, test in kfold:\n",
@@ -128,26 +109,16 @@
     "    clf.fit(train_predictors, train_target)\n",
     "    test_predictions = clf.predict(test_predictors)\n",
     "    predictions.append(test_predictions)\n",
-    "predictions = np.concatenate(predictions)\n",
-    "\n",
-    "print(predictions)"
+    "predictions = np.concatenate(predictions)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.7230100065369337\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def get_accuracy(actual, predicted):\n",
     "    acc_counter = 0\n",
@@ -162,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -184,19 +155,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['british' 'southern_us' 'italian' ..., 'italian' 'cajun_creole' 'mexican']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "target = train_data[\"cuisine\"]\n",
     "clf.fit(words_vects, target)\n",
@@ -208,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
