--- a/titanic.ipynb
+++ b/titanic.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###Read data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -10,8 +17,15 @@
    "source": [
     "import pandas\n",
     "\n",
-    "titanic = pandas.read_csv(\"kaggle_titanic/train.csv\")\n",
-    "test_data = pandas.read_csv(\"kaggle_titanic/test.csv\")"
+    "titanic = pandas.read_csv(\"data/train.csv\")\n",
+    "test_data = pandas.read_csv(\"data/test.csv\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###Preprocessing"
    ]
   },
   {
@@ -22,8 +36,6 @@
    },
    "outputs": [],
    "source": [
-    "# preprocessing\n",
-    "\n",
     "import re\n",
     "from sklearn import preprocessing\n",
     "\n",
@@ -58,10 +70,14 @@
     "    titanic[col] = columns_labels.fit_transform(titanic[col])\n",
     "    \n",
     "titanic[\"Age\"] = scaler.fit_transform(titanic[\"Age\"])\n",
-    "# titanic[\"Embarked\"] = scaler.fit_transform(titanic[\"Embarked\"].astype(float))\n",
-    "# titanic[\"Parch\"] = scaler.fit_transform(titanic[\"Parch\"].astype(float))\n",
-    "# titanic[\"Pclass\"] = scaler.fit_transform(titanic[\"Pclass\"].astype(float))\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###Features extraction"
    ]
   },
   {
@@ -72,10 +88,8 @@
    },
    "outputs": [],
    "source": [
-    "# features exctractin\n",
-    "\n",
     "from sklearn import cross_validation\n",
-    "from sklearn.feature_selection import SelectKBest, f_classif\n",
+    "# from sklearn.feature_selection import SelectKBest\n",
     "\n",
     "predictors = [\"Pclass\", \"Sex\", \"Age\", \"SibSp\", \"Parch\", \"Embarked\"]\n",
     "\n",
@@ -102,15 +116,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -126,20 +131,12 @@
    },
    "outputs": [],
    "source": [
-    "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn.ensemble import GradientBoostingClassifier, AdaBoostClassifier\n",
-    "from sklearn.neighbors import KNeighborsClassifier\n",
-    "from sklearn.tree import DecisionTreeClassifier\n",
-    "from sklearn.svm import LinearSVC\n",
     "import numpy as np\n",
     "from matplotlib import pyplot as plt\n",
     "from keras.models import Sequential\n",
     "from sklearn.cross_validation import KFold\n",
     "from keras.layers.core import Dense, Dropout, Activation\n",
     "\n",
-    "# alg = LogisticRegression(random_state=1)\n",
-    "# alg = GradientBoostingClassifier()\n",
     "nn = Sequential()\n",
     "nn.add(Dense(len(predictors), output_dim=5, activation='tanh'))\n",
     "nn.add(Dense(5, output_dim=5, activation='tanh'))\n",
@@ -195,6 +192,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###Processing test data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 22,
    "metadata": {
@@ -217,6 +221,13 @@
     "\n",
     "for col in train_columns_to_encode:\n",
     "    test_data[col] = columns_labels.fit_transform(test_data[col])\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###Predict test data"
    ]
   },
   {
@@ -436,9 +447,6 @@
     }
    ],
    "source": [
-    "# predict test data\n",
-    "\n",
-    "# alg.fit(titanic[predictors], titanic[\"Survived\"])\n",
     "nn.fit(titanic[predictors].as_matrix(), class_to_vect(titanic.Survived.as_matrix()), nb_epoch=100, show_accuracy=True)\n",
     "predictions = nn.predict_classes(test_data[predictors].as_matrix())\n",
     "\n",
@@ -446,26 +454,8 @@
     "        \"PassengerId\": test_data[\"PassengerId\"],\n",
     "        \"Survived\": predictions\n",
     "    })\n",
-    "submission.to_csv(\"kaggle_titanic/submission.csv\", index=False)"
+    "submission.to_csv(\"data/submission.csv\", index=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
