--- a/movielens_recommender.ipynb
+++ b/movielens_recommender.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -113,53 +113,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "   userId  movieId  rating  timestamp                time  year  month  day  \\\n",
-      "0       1        1       5  847117005 1996-11-04 14:16:45  1996     11    4   \n",
-      "1       1        2       3  847642142 1996-11-10 16:09:02  1996     11   10   \n",
-      "2       1       10       3  847641896 1996-11-10 16:04:56  1996     11   10   \n",
-      "3       1       32       4  847642008 1996-11-10 16:06:48  1996     11   10   \n",
-      "4       1       34       4  847641956 1996-11-10 16:05:56  1996     11   10   \n",
-      "\n",
-      "   hour  \n",
-      "0    14  \n",
-      "1    16  \n",
-      "2    16  \n",
-      "3    16  \n",
-      "4    16  \n",
-      "   movieId                        title  year  Action  Adventure  Animation  \\\n",
-      "0        1                    Toy Story  1995       0          1          1   \n",
-      "1        2                      Jumanji  1995       0          1          0   \n",
-      "2        3             Grumpier Old Men  1995       0          0          0   \n",
-      "3        4            Waiting to Exhale  1995       0          0          0   \n",
-      "4        5  Father of the Bride Part II  1995       0          0          0   \n",
-      "\n",
-      "   Children's  Comedy  Crime  Documentary   ...     Fantasy  Film-Noir  \\\n",
-      "0           0       1      0            0   ...           1          0   \n",
-      "1           0       0      0            0   ...           1          0   \n",
-      "2           0       1      0            0   ...           0          0   \n",
-      "3           0       1      0            0   ...           0          0   \n",
-      "4           0       1      0            0   ...           0          0   \n",
-      "\n",
-      "   Horror  Musical  Mystery  Romance  Sci-Fi  Thriller  War  Western  \n",
-      "0       0        0        0        0       0         0    0        0  \n",
-      "1       0        0        0        0       0         0    0        0  \n",
-      "2       0        0        0        1       0         0    0        0  \n",
-      "3       0        0        0        1       0         0    0        0  \n",
-      "4       0        0        0        0       0         0    0        0  \n",
-      "\n",
-      "[5 rows x 21 columns]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(ratings_data.head())\n",
     "print(movies_data.head())"
@@ -167,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -190,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -241,19 +199,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.959643335728\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn.metrics import mean_squared_error\n",
     "from random import sample\n",
@@ -264,7 +214,7 @@
     "predictions = []\n",
     "actual = []\n",
     "\n",
-    "for movie_id in range(1, 5): # sample(ratings_table.columns.values.tolist(), 3):\n",
+    "for movie_id in range(1, 5):\n",
     "    movie_predictions = cross_validation(ratings_table, movie_id)\n",
     "    rated_movie_ixs = ratings_table[rated_items[movie_id]].index \n",
     "    predictions.append(pd.Series(movie_predictions, index=ratings_table.index)[rated_movie_ixs])\n",
@@ -273,8 +223,7 @@
     "predictions = pd.concat(predictions)\n",
     "actual = pd.concat(actual)\n",
     "    \n",
-    "error = rmse(actual, predictions)\n",
-    "print(error)"
+    "error = rmse(actual, predictions)\n"
    ]
   },
   {
